--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -822,7 +822,7 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** Compared to the prior model, the oversampled model seemed to have done a better job and performed better as it has a The oversampled model generated an accuracy score of 99% which turned out to be higher than the model fitted with imbalanced data. The oversampled model performs better because it does a exceptional job in catching mistakes such as labeling non-healthy (high-risk) loans as healthy (low-risk). This is a!"
+    "**Answer:** Compared to the prior model, the oversampled model seemed to have done a better job and performed better as it has an accuracy score of 99% which comparatively higher. ="
    ]
   }
  ],
