--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
        "0.9936781215845847"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -767,14 +767,14 @@
        "Actual Non-Healthy Loans                           615  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Generate a confusion matrix for the model\n",
-    "cm = confusion_matrix(y_test, LR_oversampled_pred)\n",
+    "cm = confusion_matrix(y_test, LR_pred)\n",
     "cm_df = pd.DataFrame(cm, \n",
     "                                index = ['Actual Healthy Loans ', \n",
     "                                'Actual Non-Healthy Loans '], \n",
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +806,7 @@
    ],
    "source": [
     "# Print the classification report for the model\n",
-    "print(classification_report(y_test, LR_oversampled_pred))\n"
+    "print(classification_report(y_test, LR_pred))\n"
    ]
   },
   {
@@ -822,7 +822,7 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** Compared to the prior model, the oversampled model seemed to have done a better job and performed better as it has an accuracy score of 99% which comparatively higher. ="
+    "**Answer:** Compared to the prior model, the oversampled model seemed to have done a better job and performed better as it has an accuracy score of 99% which comparatively higher. "
    ]
   }
  ],
